# DroneStack-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt  structure.txt  todo.txt
config/gates/: four_gate_course.yaml  full_test_course.yaml
drone_stack/: __init__.py  controller.py  gate_map.py  main.py  state_estimator.py  trajectory.py
drone_stack/control/: pid_controller.py
drone_stack/core/: gate.py  pose.py
drone_stack/estimation/: state_estimator.py
drone_stack/estimation/ekf/: ekf_core.py  imu_propagation.py
drone_stack/interfaces/: drone_interface.py
drone_stack/simulation/: airsim_drone.py
drone_stack/utils/: math_utils.py
scripts/: acro_controller.py  basic_flight.py  basic_gate_flight.py  test_estimation.py
tests/: test_airsim.py
